--- a/index.html
+++ b/index.html
@@ -6,88 +6,170 @@
     <title>Authentrics.AI – Access / Purchase</title>
 
     <style>
+        :root {
+            --brand-purple: rgb(204, 102, 255);
+            --bg-dark: #0b0f1a;
+            --panel-white: #ffffff;
+            --text-light: #e5e7eb;
+            --text-muted: #94a3b8;
+        }
+
         body {
-          margin: 0;
-          font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
-                       Roboto, Helvetica, Arial, sans-serif;
-          background: #ffffff;
-          color: #0f172a;
-          text-align: center;
-          padding: 80px 20px;
+            margin: 0;
+            font-family: -apple-system, BlinkMacSystemFont, "Segoe UI",
+                         Roboto, Helvetica, Arial, sans-serif;
+            background: var(--bg-dark);
+            color: var(--text-light);
+            padding: 72px 20px;
         }
 
         .container {
-          max-width: 820px;
-          margin: 0 auto;
+            max-width: 1100px;
+            margin: 0 auto;
         }
 
-        .logo {
-          max-width: 420px;
-          margin-bottom: 48px;
+        /* --- Split hero --- */
+        .product-header {
+            display: flex;
+            align-items: stretch;
+            border-radius: 14px;
+            overflow: hidden;
+            box-shadow: 0 30px 80px rgba(0, 0, 0, 0.35);
+        }
+
+        /* ↓ Slimmer white panel */
+        .logo-column {
+            flex: 0 0 320px; /* was 420px */
+            background: var(--panel-white);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            padding: 32px;   /* was 48px */
+            border-right: 1px solid #e5e7eb;
+        }
+
+        .logo-column img {
+            max-width: 100%;
+            height: auto;
+        }
+
+        .details-column {
+            flex: 1;
+            padding: 56px;
+            background: var(--bg-dark);
+        }
+
+        .product-title {
+            font-size: 2rem;
+            font-weight: 700;
+            margin-bottom: 16px;
+        }
+
+        .product-title .brand {
+            color: var(--brand-purple);
         }
 
         .tagline {
-          font-size: 1.3rem;
-          line-height: 1.6;
-          color: #334155;
-          margin-bottom: 36px;
+            font-size: 1.25rem;
+            line-height: 1.6;
+            color: #c7d2fe;
+            margin-bottom: 20px;
         }
 
         .subtext {
-          font-size: 1.05rem;
-          color: #475569;
-          margin-bottom: 44px;
+            font-size: 1.05rem;
+            color: var(--text-muted);
+        }
+
+        .micro-note {
+            margin-top: 14px;
+            font-size: 0.85rem;
+            color: #64748b;
+        }
+
+        /* --- Purchase section --- */
+        .purchase-section {
+            margin-top: 72px;
+            text-align: center;
+        }
+
+        .purchase-title {
+            font-size: 1.4rem;
+            font-weight: 600;
+            margin-bottom: 28px;
+            color: #f8fafc;
         }
 
         .cta-group {
-          margin: 44px 0;
+            margin-bottom: 32px;
         }
 
         .button {
-          display: inline-block;
-          margin: 12px;
-          padding: 14px 30px;
-          font-size: 1rem;
-          color: #ffffff;
-          background: #0f172a;
-          border-radius: 6px;
-          text-decoration: none;
-          font-weight: 600;
-          transition: all 0.15s ease;
+            display: inline-block;
+            margin: 10px;
+            padding: 14px 34px;
+            font-size: 1rem;
+            color: #ffffff;
+            background: var(--brand-purple);
+            border-radius: 8px;
+            text-decoration: none;
+            font-weight: 600;
+            transition: all 0.15s ease;
+            border: 1px solid var(--brand-purple);
         }
 
         .button.secondary {
-          background: #ffffff;
-          color: #0f172a;
-          border: 1px solid #cbd5f5;
+            background: transparent;
+            color: var(--brand-purple);
         }
 
         .button:hover {
-          transform: translateY(-1px);
-          box-shadow: 0 6px 16px rgba(15, 23, 42, 0.12);
+            transform: translateY(-1px);
+            box-shadow: 0 10px 24px rgba(204, 102, 255, 0.35);
         }
 
+        /* --- Secondary links --- */
         .secondary-links {
-          margin-top: 28px;
-          font-size: 0.95rem;
-          color: #64748b;
+            font-size: 0.95rem;
+            color: var(--text-muted);
         }
 
         .secondary-links a {
-          color: #64748b;
-          text-decoration: none;
-          margin: 0 6px;
+            color: var(--text-muted);
+            text-decoration: none;
+            margin: 0 8px;
         }
 
         .secondary-links a:hover {
-          color: #0f172a;
-          text-decoration: underline;
+            color: var(--brand-purple);
+            text-decoration: underline;
         }
 
         footer {
-          margin-top: 64px;
-          font-size: 0.9rem;
-          color: #64748b;
+            margin-top: 72px;
+            font-size: 0.85rem;
+            color: #64748b;
+            text-align: center;
+        }
+
+        /* --- Responsive --- */
+        @media (max-width: 900px) {
+            .product-header {
+                flex-direction: column;
+            }
+
+            .logo-column {
+                flex: none;
+                width: 100%;
+                padding: 28px;
+                border-right: none;
+                border-bottom: 1px solid #e5e7eb;
+            }
+
+            .details-column {
+                padding: 40px 24px;
+                text-align: center;
+            }
         }
     </style>
 </head>
@@ -95,56 +177,76 @@
 <body>
 <div class="container">
 
-    <!-- Logo -->
-    <a href="https://authentrics.ai">
-        <img
-                class="logo"
-                src="authentrics-logo-trademark-compatible%20colorized.png"
-                alt="AUTHENTRICS.AI Logo"
-        />
-    </a>
+    <!-- Split hero -->
+    <div class="product-header">
 
-    <!-- Primary description -->
-    <p class="tagline">
-        The weight-level control toolbox for mission-critical AI pipelines.
-        Neuron-level diagnostics and repair — without retraining.
-    </p>
+        <!-- Logo on white (slimmer) -->
+        <div class="logo-column">
+            <a href="https://authentrics.ai">
+                <img
+                        src="authentrics-logo-trademark-compatible%20colorized.png"
+                        alt="AUTHENTRICS.AI Logo"
+                />
+            </a>
+        </div>
 
-    <!-- Availability -->
-    <p class="subtext">
-        Available via Google Cloud Marketplace, AWS Marketplace,
-        and private enterprise offers.
-    </p>
+        <!-- Dark text section -->
+        <div class="details-column">
+            <div class="product-title">
+                Get Started with <span class="brand">Authentrics.AI</span>
+            </div>
 
-    <!-- Primary CTAs -->
-    <div class="cta-group">
-        <a class="button" href="https://rb.gy/lxg8w1">
-            Google Cloud Marketplace
-        </a>
+            <p class="tagline">
+                Qualify, subscribe, and deploy — in days, not months.
+                Authentrics is standard software deployment, not SaaS.
+                Delivered via cloud marketplace or on-prem, with pricing tailored
+                to your company size, type, and deployment style.
+            </p>
 
-        <a class="button secondary" href="https://rb.gy/lxg8w1">
-            AWS Marketplace
-        </a>
+            <p class="subtext">
+                Available through cloud marketplaces and private enterprise distribution.
+                Download access and licensing are provided post-purchase.
+            </p>
 
-        <a class="button secondary" href="mailto:sales@authentrics.ai">
-            Request Access
-        </a>
+            <div class="micro-note">
+                Enterprise software · License-controlled distribution · No public downloads
+            </div>
+        </div>
+
     </div>
 
-    <!-- Secondary links (non-dominant) -->
-    <div class="secondary-links">
-        <a href="https://authentrics.ai/get-started">Get Started</a>
-        ·
-        <a href="https://authentrics.ai/solutions">View Solutions</a>
-        ·
-        <a href="https://www.linkedin.com/company/authentrics-ai"
-           target="_blank"
-           rel="noopener noreferrer">LinkedIn</a>
+    <!-- Purchase options -->
+    <div class="purchase-section">
+        <div class="purchase-title">Purchase Options</div>
+
+        <div class="cta-group">
+            <a class="button" href="https://rb.gy/lxg8w1">
+                Google Cloud Marketplace
+            </a>
+
+            <a class="button secondary" href="https://rb.gy/lxg8w1">
+                AWS Marketplace
+            </a>
+
+            <a class="button secondary" href="mailto:sales@authentrics.ai">
+                Request Private Access
+            </a>
+        </div>
+
+        <div class="secondary-links">
+            <a href="https://authentrics.ai/get-started">Get Started</a>
+            ·
+            <a href="https://authentrics.ai/solutions">View Solutions</a>
+            ·
+            <a href="https://www.linkedin.com/company/authentrics-ai"
+               target="_blank"
+               rel="noopener noreferrer">LinkedIn</a>
+        </div>
     </div>
 
     <!-- Footer -->
     <footer>
-        © 2025 Authentrics.AI. All rights reserved.
+        © 2026 Authentrics.AI. All rights reserved.
     </footer>
 
 </div>
