adding aws marketplace url

--- a/index.html
+++ b/index.html
@@ -224,11 +224,11 @@
                 Google Cloud Marketplace
             </a>
 
-            <a class="button secondary" href="https://rb.gy/lxg8w1">
+            <a class="button secondary" href="https://aws.amazon.com/marketplace/pp/prodview-tqdso2utcxl3q">
                 AWS Marketplace
             </a>
 
-            <a class="button secondary" href="mailto:sales@authentrics.ai">
+            <a class="button secondary" href="mailto:info@authentrics.ai">
                 Request Private Access
             </a>
         </div>
